# tipe-2024

./: .gitignore  README.md  saved_game_collection.pickle
best/: saved_brains-484-13.pickle  saved_brains-484-53.pickle  saved_curves-484-53.pickle
playground-neural-network/shorelark/libs/neural-network/: Cargo.toml
playground-neural-network/shorelark/libs/neural-network/src/: lib.rs
presentation/: codes.tex  jalons.txt  mcot.fdb_latexmk  mcot.tex  pres.fdb_latexmk  pres.nav  pres.tex
presentation/_minted-codes/: 280BAA08B098DE023D4CBEC192153C4F7BAC92BF908EF0A8D2F6DD17113B0DFF.pygtex  3673882AFFEF203A473B9377F02875B07BAC92BF908EF0A8D2F6DD17113B0DFF.pygtex  4D4DE8D8AE5FA74FBD9CD3F55DF270297BAC92BF908EF0A8D2F6DD17113B0DFF.pygtex  729BA6AF791913811B09C9E3BBA6DA867BAC92BF908EF0A8D2F6DD17113B0DFF.pygtex  8A2E1CC34548835984671E4BD66DACBC6519C57F67653862365C0CF41BAA181F.pygtex  8B73C849E21AFD6BE681B249BBC90D5E7BAC92BF908EF0A8D2F6DD17113B0DFF.pygtex  918AEB5DE0E4674B532B1DED2A742CBF7BAC92BF908EF0A8D2F6DD17113B0DFF.pygtex  92DBE9BC8DAFD4683756CDA80F9741A07BAC92BF908EF0A8D2F6DD17113B0DFF.pygtex  (+3 more)
presentation/mcot/: mcot.bbl  (+4 more)
shorelark/libs/simulation-wasm/: Cargo.toml
shorelark/libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  world.rs
snake-the-game/: TODO  config.py  curve_53.pickle  game.py  game_collection.py  genetic_algorithm  genetic_algorithm.py  main.py  neural_network.py  play_snake.py  plot_brain.py  plot_compare_convergences.py  plot_snake.py  saved_brains-484-13.pickle  saved_brains-484-53.pickle  saved_curves-484-13.pickle  saved_curves-484-53.pickle
(+55 files in other folders)
