[package]
name = "neural-network"
version = "0.1.0"
authors = ["Marilou de Courville <marilou@courville.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
approx = "0.4"

[dev-dependencies]
rand_chacha = "0.3"
approx = "0.4"